Fix Moiré overflow bug

--- a/src/components/posts/linesExample/style.module.css
+++ b/src/components/posts/linesExample/style.module.css
@@ -4,3 +4,7 @@
     display: block;
     margin: 0 auto;
 }
+
+.container {
+    overflow-x: scroll;
+}
